[tool.poetry]
name = "pygametest"
version = "0.1.0"
description = ""
authors = ["Sergey Mirvoda <sergey@octonica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
